# vizelec

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
canvas/: index.html
docs/: README.md  canvas.md  vizelec.md
search/: search_index.json
spice_draw/: main.py  stick_draw.py
tests/: counter.v  inv.cir  test_parse.py
vizelec/: index.html  main.py  parse.py  pinout.py  spice.py  stick_draw.py
vizelec/ebnf/: spice  verilog
