[tool.poetry]
name = "vizelec"
version = "0.1.2"
description = "Generate drawing and graph of schematic from various files."
authors = ["Patarimi <38954040+Patarimi@users.noreply.github.com>"]
license = "MIT"
readme = "docs/README.md"


[tool.poetry.scripts]
vizelec = "vizelec:main.cli"
canvas = "vizelec:stick_draw.app"

[tool.poe.tasks]
doc         = "typer vizelec.main utils docs --name vizelec --output README.md"
show-update = "poetry show -l -o"
publish     = "poetry publish --build --username __token__ --password $PYPI_TOKEN"
increment   = ""
release     = ["doc", "publish"]

[tool.poetry.dependencies]
python = "^3.10"
schemdraw = "^0.17"
typer = "^0.9.0"
networkx = "^3.0"
matplotlib = "^3.7.1"
lark = "^1.1.5"
rich = "^13.4.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
pytest = "^7.3.0"
mkdocs = "^1.5.3"
mkdocs-typer = "^0.0.3"
mkdocs-material = "^9.4.10"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
