[project]
name = "vizelec"
version = "0.1.2"
description = "Generate drawing and graph of schematic from various files."
authors = [{name="Patarimi", email="38954040+Patarimi@users.noreply.github.com"}]
license = "MIT"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "schemdraw (>0.18)",
    "typer (>0.12.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>3.7.1)",
    "lark (>1.1.5)",
    "rich (>13.4.1)",
    "numpy (>=2.3.1,<3.0.0)"]


[project.scripts]
vizelec = "vizelec:main.cli"
canvas = "vizelec:stick_draw.app"

[tool.poe.tasks]
doc         = "mkdocs gh-deploy"
show-update = "poetry show -l -o"
publish     = "poetry publish --build --username __token__ --password $PYPI_TOKEN"
increment   = ""
release     = ["doc", "publish"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.36.0"
pytest = "^8.0.0"
mkdocs = "^1.5.3"
mkdocs-typer = "^0.0.3"
mkdocs-material = "^9.4.10"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
